<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTxt"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageTxt"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/age"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageLayout"
        android:layout_marginTop="64dp">

        <RadioButton
            android:id="@+id/businessRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"/>

        <RadioButton
            android:id="@+id/touristRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourist"/>


    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/next"
        android:id="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>


</androidx.constraintlayout.widget.ConstraintLayout>